--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ jobs:
       env:
         - TRAVIS_PYTHON_VERSION=3.8
         - CONDA_OS=MacOSX
-        - CC=$(which clang)
-        - CXX=$(which clang++)
+        - CC=clang
+        - CXX=clang++
         - CMAKE_ARGS='-DTIMEMORY_BUILD_PYTHON_HIDDEN=ON'
         - BUILD_ARGS='--build-libs shared --caliper --python --stats --tools --cxx-standard=14'
 
@@ -44,8 +44,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which gcc-6)
-        - CXX=$(which g++-6)
+        - CC=gcc-6
+        - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
         - BUILD_ARGS='--quick --build-libs static shared --python --papi --ompt --gotcha --caliper --kokkos --stats --tools --cxx-standard=14'
     # GCC 7
@@ -69,8 +69,8 @@ jobs:
             - google-perftools
             - lcov
       env:
-        - CC=$(which gcc-7)
-        - CXX=$(which g++-7)
+        - CC=gcc-7
+        - CXX=g++-7
         - COVERAGE=1
         - BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --gotcha --stats --cxx-standard=17'
     #
@@ -96,8 +96,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which gcc-8)
-        - CXX=$(which g++-8)
+        - CC=gcc-8
+        - CXX=g++-8
         - BUILD_ARGS='--build-libs static --mpi --cxx-standard=17'
     # Clang 6.0
     - os: linux
@@ -118,8 +118,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which clang-6.0)
-        - CXX=$(which clang++-6.0)
+        - CC=clang-6.0
+        - CXX=clang++-6.0
         - BUILD_ARGS='--quick --build-libs static --ompt --kokkos --stats --tools --cxx-standard=14'
     # Clang 7
     - os: linux
@@ -141,8 +141,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which clang-7)
-        - CXX=$(which clang++-7)
+        - CC=clang-7
+        - CXX=clang++-7
         - BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --ompt --stats --tools --cxx-standard=14'
     # ------------------------------------------------------------------------ #
     #
@@ -169,8 +169,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which gcc-6)
-        - CXX=$(which g++-6)
+        - CC=gcc-6
+        - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
         - BUILD_ARGS='--build-libs shared --papi --gotcha --python --kokkos --stats --ipo --cxx-standard=14'
     # GCC 7
@@ -194,8 +194,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which gcc)
-        - CXX=$(which g++)
+        - CC=gcc
+        - CXX=g++
         - BUILD_TYPE=Debug
         - BUILD_ARGS='--quick --build-libs static --papi --mpi --ompt --kokkos --tools --cxx-standard=14'
     #
@@ -215,8 +215,8 @@ jobs:
             - mpich
             - graphviz
       env:
-        - CC=$(which gcc-8)
-        - CXX=$(which g++-8)
+        - CC=gcc-8
+        - CXX=g++-8
         - BUILD_TYPE=Release
         - BUILD_ARGS='--build-libs shared --mpi --python --stats --cxx-standard=17 --ipo --extra-optimizations'
     # Clang 6.0
@@ -240,8 +240,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which clang-6.0)
-        - CXX=$(which clang++-6.0)
+        - CC=clang-6.0
+        - CXX=clang++-6.0
         - PROFILE=1
         - BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --ompt --kokkos --stats --tools --cxx-standard=14'
         - CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'
@@ -263,8 +263,8 @@ jobs:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - CC=$(which clang-7)
-        - CXX=$(which clang++-7)
+        - CC=clang-7
+        - CXX=clang++-7
         - BUILD_ARGS='--quick --build-libs shared --gotcha --caliper --mpi --papi --python --stats --tools --cxx-standard=14'
 
     # ------------------------------------------------------------------------ #
