Minor cmake modifications

--- a/source/tools/kokkos-connector/CMakeLists.txt
+++ b/source/tools/kokkos-connector/CMakeLists.txt
@@ -93,6 +93,7 @@ add_library(kp_timemory_common OBJECT ${PROJECT_SOURCE_DIR}/kp_timemory_common.c
     ${PROJECT_SOURCE_DIR}/kp_timemory.hpp)
 target_link_libraries(kp_timemory_common PUBLIC
     timemory::timemory-headers
+    timemory::timemory-compile-options
     ${timemory_INTERFACE_LIBRARY})
 set(timemory_COMMON_SOURCES $<TARGET_OBJECTS:kp_timemory_common>)
 
@@ -188,27 +189,27 @@ endfunction()
 
 add_connector_config(trip_count
     COMPONENTS trip_count
-    TARGETS timemory::timemory-headers)
+    TARGETS timemory::timemory-headers timemory::timemory-compile-options)
 
 add_connector_config(timers
     COMPONENTS wall_clock cpu_clock cpu_util
-    TARGETS timemory::timemory-headers)
+    TARGETS timemory::timemory-headers timemory::timemory-compile-options)
 
 add_connector_config(memory
     COMPONENTS peak_rss page_rss virtual_memory current_peak_rss
-    TARGETS timemory::timemory-headers)
+    TARGETS timemory::timemory-headers timemory::timemory-compile-options)
 
 add_connector_config(timers_memory
     COMPONENTS wall_clock cpu_clock cpu_util peak_rss page_rss virtual_memory
-    TARGETS timemory::timemory-headers)
+    TARGETS timemory::timemory-headers timemory::timemory-compile-options)
 
 add_connector_config(io
     COMPONENTS read_bytes read_char written_bytes written_char
-    TARGETS timemory::timemory-headers)
+    TARGETS timemory::timemory-headers timemory::timemory-compile-options)
 
 add_connector_config(context_switch
     COMPONENTS priority_context_switch voluntary_context_switch
-    TARGETS timemory::timemory-headers)
+    TARGETS timemory::timemory-headers timemory::timemory-compile-options)
 
 if(TIMEMORY_USE_GPERFTOOLS)
     add_connector_config(gperftools
@@ -219,7 +220,7 @@ endif()
 if(TIMEMORY_USE_PAPI)
     add_connector_config(papi
         COMPONENTS papi_array_t
-        TARGETS timemory::timemory-papi-component)
+        TARGETS timemory::timemory-papi-component timemory::timemory-compile-options)
 
     add_connector_config(cpu_roofline
         COMPONENTS cpu_roofline_flops
@@ -227,7 +228,8 @@ if(TIMEMORY_USE_PAPI)
         timemory::timemory-ert
         timemory::timemory-cpu-roofline
         timemory::timemory-papi-component
-        timemory::timemory-roofline-component)
+        timemory::timemory-roofline-component
+        timemory::timemory-compile-options)
 
     # creates a normal connector config and a rates version
     function(add_papi_connector_config _NAME)
@@ -238,7 +240,7 @@ if(TIMEMORY_USE_PAPI)
             TARGETS     ${CONNECTOR_TARGETS}
             DEFINITIONS ${CONNECTOR_DEFINITIONS}
             ENVIRONMENT ${CONNECTOR_ENVIRONMENT}
-            TARGETS timemory::timemory-papi)
+            TARGETS timemory::timemory-papi timemory::timemory-compile-options)
         string(REPLACE "papi_tuple" "papi_rate_tuple"
             CONNECTOR_COMPONENTS "${CONNECTOR_COMPONENTS}")
         add_connector_config(${_NAME}_rate
@@ -246,80 +248,80 @@ if(TIMEMORY_USE_PAPI)
             TARGETS     ${CONNECTOR_TARGETS}
             DEFINITIONS ${CONNECTOR_DEFINITIONS}
             ENVIRONMENT ${CONNECTOR_ENVIRONMENT}
-            TARGETS timemory::timemory-papi)
+            TARGETS timemory::timemory-papi timemory::timemory-compile-options)
     endfunction()
 
     add_papi_connector_config(cpu_flops
         COMPONENTS papi_tuple<PAPI_DP_OPS,PAPI_SP_OPS>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_instructions
         COMPONENTS papi_tuple<PAPI_TOT_INS,PAPI_LD_INS,PAPI_SR_INS>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_cache_misses
         COMPONENTS papi_tuple<PAPI_L1_TCM,PAPI_L2_TCM,PAPI_L3_TCM>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_tlb
         COMPONENTS papi_tuple<PAPI_TLB_DM,PAPI_TLB_IM,PAPI_TLB_TL,PAPI_TLB_SD>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_branching
         COMPONENTS
         papi_tuple<PAPI_BR_UCN,PAPI_BR_CN,PAPI_BR_TKN,PAPI_BR_NTK,PAPI_BR_MSP,PAPI_BR_PRC,PAPI_BR_INS>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_stalls
         COMPONENTS
         papi_tuple<PAPI_MEM_SCY,PAPI_MEM_RCY,PAPI_MEM_WCY,PAPI_RES_STL,PAPI_FP_STAL>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_l1_misses
         COMPONENTS papi_tuple<PAPI_L1_DCM,PAPI_L1_ICM,PAPI_L1_TCM,PAPI_L1_LDM,PAPI_L1_STM>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_l2_misses
         COMPONENTS papi_tuple<PAPI_L2_DCM,PAPI_L2_ICM,PAPI_L2_TCM,PAPI_L2_LDM,PAPI_L2_STM>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_l3_misses
         COMPONENTS papi_tuple<PAPI_L3_DCM,PAPI_L3_ICM,PAPI_L3_TCM,PAPI_L3_LDM,PAPI_L3_STM>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_l1_total
         COMPONENTS papi_tuple<PAPI_L1_TCM,PAPI_L1_TCH,PAPI_L1_TCA,PAPI_L1_TCR,PAPI_L1_TCW>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_l2_total
         COMPONENTS papi_tuple<PAPI_L2_TCM,PAPI_L2_TCH,PAPI_L2_TCA,PAPI_L2_TCR,PAPI_L2_TCW>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 
     add_papi_connector_config(cpu_l3_total
         COMPONENTS papi_tuple<PAPI_L3_TCM,PAPI_L3_TCH,PAPI_L3_TCA,PAPI_L3_TCR,PAPI_L3_TCW>
-        TARGETS timemory::timemory-papi)
+        TARGETS timemory::timemory-papi timemory::timemory-compile-options)
 endif()
 
 if(TIMEMORY_USE_CUDA)
     add_connector_config(cuda_profiler
         COMPONENTS nvtx_marker
         TARGETS
-        timemory::timemory-cuda-component)
+        timemory::timemory-cuda-component timemory::timemory-compile-options)
 
     add_connector_config(cuda_event
         COMPONENTS cuda_event
         TARGETS
-        timemory::timemory-cuda-component)
+        timemory::timemory-cuda-component timemory::timemory-compile-options)
 
     add_connector_config(cuda_activity
         COMPONENTS cupti_activity
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component timemory::timemory-compile-options)
 
     add_connector_config(cuda_hw_counters
         COMPONENTS cupti_counters
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component timemory::timemory-compile-options)
 
     add_connector_config(gpu_roofline
         GPU
@@ -327,104 +329,116 @@ if(TIMEMORY_USE_CUDA)
         TARGETS
         timemory::timemory-ert
         timemory::timemory-gpu-roofline
-        timemory::timemory-roofline-component)
+        timemory::timemory-roofline-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_instructions
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=inst_issued,inst_executed,thread_inst_executed,ldst_executed,inst_integer,inst_fp_16,inst_fp_32,inst_fp_64,inst_inter_thread_communication"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_cache_misses
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=tex_cache_transactions,tex_cache_hit_rate,tex0_cache_sector_queries,tex0_cache_sector_misses,tex1_cache_sector_queries,tex1_cache_sector_misses,l2_tex_hit_rate,dram_read_bytes,dram_write_bytes"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_branching
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=divergent_branch,branch,branch_efficiency"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_stalls
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=stall_inst_fetch,stall_exec_dependency,stall_memory_dependency,stall_texture,stall_sync,stall_other,stall_constant_memory_dependency,stall_pipe_busy,stall_memory_throttle,stall_not_selected"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_l2_total
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=l2_read_transactions,l2_write_transactions,l2_atomic_transactions,l2_global_load_bytes,l2_local_load_bytes,l2_local_global_store_bytes,l2_global_reduction_bytes,l2_global_atomic_store_bytes"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_efficiency
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=branch_efficiency,warp_execution_efficiency,warp_nonpred_execution_efficiency,gld_efficiency,gst_efficiency,shared_efficiency,sm_efficiency,flop_hp_efficiency,flop_sp_efficiency,flop_dp_efficiency"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_ipc
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=ipc,issued_ipc"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_warps
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=warps_launched,active_warps,inst_per_warp,warp_execution_efficiency,warp_nonpred_execution_efficiency,unique_warps_launched,eligible_warps_per_cycle"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_double_flops
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=flop_count_dp,flop_count_dp_add,flop_count_dp_fma,flop_count_dp_mul,flop_dp_efficiency"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_single_flops
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=flop_count_sp,flop_count_sp_add,flop_count_sp_fma,flop_count_sp_mul,flop_count_sp_special,flop_sp_efficiency"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 
     add_connector_config(gpu_half_flops
         COMPONENTS cupti_counters
         ENVIRONMENT "TIMEMORY_CUPTI_METRICS=flop_count_hp,flop_count_hp_add,flop_count_hp_mul,flop_count_hp_fma,flop_hp_efficiency"
         TARGETS
-        timemory::timemory-cupti-component)
+        timemory::timemory-cupti-component
+        timemory::timemory-compile-options)
 endif()
 
 if(TIMEMORY_USE_VTUNE)
     add_connector_config(vtune
         COMPONENTS vtune_profiler vtune_frame vtune_event
-        TARGETS timemory::timemory-vtune)
+        TARGETS timemory::timemory-vtune timemory::timemory-compile-options)
 endif()
 
 if(TIMEMORY_USE_CALIPER)
     add_connector_config(caliper
         COMPONENTS caliper_config caliper_marker
-        TARGETS timemory::timemory-caliper)
+        TARGETS timemory::timemory-caliper timemory::timemory-compile-options)
 endif()
 
 if(TIMEMORY_USE_LIKWID)
     add_connector_config(likwid
         COMPONENTS likwid_marker likwid_nvmarker
-        TARGETS timemory::timemory-likwid)
+        TARGETS timemory::timemory-likwid timemory::timemory-compile-options)
 endif()
 
 if(TIMEMORY_USE_TAU)
     add_connector_config(tau
         COMPONENTS tau_marker
-        TARGETS timemory::timemory-tau)
+        TARGETS timemory::timemory-tau timemory::timemory-compile-options)
 endif()
 
 set(_OMPT_LIB)
 if(TARGET timemory::timemory-ompt-shared)
-    set(_OMPT_LIB timemory::timemory-ompt-shared)
+    set(_OMPT_LIB timemory::timemory-ompt-shared timemory::timemory-compile-options)
 elseif(TARGET timemory::timemory-ompt-static)
-    set(_OMPT_LIB timemory::timemory-ompt-static)
+    set(_OMPT_LIB timemory::timemory-ompt-static timemory::timemory-compile-options)
 endif()
 
 if(TIMEMORY_USE_OMPT AND _OMPT_LIB)
