--- a/source/tools/timemory-avail/CMakeLists.txt
+++ b/source/tools/timemory-avail/CMakeLists.txt
@@ -8,7 +8,10 @@ add_executable(timemory-avail ${_EXCLUDE}
     ${CMAKE_CURRENT_LIST_DIR}/timemory-avail.cpp
     ${CMAKE_CURRENT_LIST_DIR}/timemory-avail.hpp)
 target_include_directories(timemory-avail PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-target_link_libraries(timemory-avail PRIVATE timemory-extensions timemory-headers)
+target_link_libraries(timemory-avail PRIVATE
+    timemory::timemory-compile-options
+    timemory::timemory-extensions
+    timemory::timemory-headers)
 set_target_properties(timemory-avail PROPERTIES INSTALL_RPATH_USE_LINK_PATH ON)
 install(TARGETS timemory-avail
     DESTINATION bin
