--- a/source/tools/timemory-mpip/CMakeLists.txt
+++ b/source/tools/timemory-mpip/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 
 if(NOT TIMEMORY_BUILD_MPIP_LIBRARY OR NOT TIMEMORY_USE_MPI OR NOT TIMEMORY_USE_GOTCHA OR
-    NOT TARGET timemory-cxx-shared OR TIMEMORY_SKIP_BUILD)
+    NOT TARGET timemory::timemory-cxx-shared OR TIMEMORY_SKIP_BUILD)
     return()
 endif()
 
@@ -12,10 +12,10 @@ add_library(timemory::timemory-mpip-shared ALIAS timemory-mpip-shared)
 
 # public link targets
 target_link_libraries(timemory-mpip-shared PUBLIC
-    timemory-headers
-    timemory-cxx-shared
-    timemory-mpi
-    timemory-gotcha)
+    timemory::timemory-headers
+    timemory::timemory-cxx-shared
+    timemory::timemory-mpi
+    timemory::timemory-gotcha)
 
 # private link targets
 target_link_libraries(timemory-mpip-shared PRIVATE
@@ -30,4 +30,5 @@ set_target_properties(timemory-mpip-shared PROPERTIES
     SOVERSION       ${timemory_VERSION_MAJOR}.${timemory_VERSION_MINOR})
 
 # installation
-install(TARGETS timemory-mpip-shared DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS timemory-mpip-shared
+    DESTINATION ${CMAKE_INSTALL_LIBDIR})
