--- a/source/tools/timemory-pid/CMakeLists.txt
+++ b/source/tools/timemory-pid/CMakeLists.txt
@@ -11,9 +11,9 @@ if(TIMEMORY_BUILD_TOOLS OR TIMEMORY_BUILD_PID)
     add_executable(timemory-pid timemory-pid.cpp)
 
     target_link_libraries(timemory-pid PRIVATE
-        timemory-compile-options
-        timemory-headers
-        timemory-mpi)
+        timemory::timemory-compile-options
+        timemory::timemory-headers
+        timemory::timemory-mpi)
 
     set_target_properties(timemory-pid PROPERTIES
         INSTALL_RPATH_USE_LINK_PATH ON)
