--- a/source/tools/timemory-jump/CMakeLists.txt
+++ b/source/tools/timemory-jump/CMakeLists.txt
@@ -22,12 +22,12 @@ foreach(LIB_TYPE shared static)
     target_compile_definitions(timemory-jump-${LIB_TYPE} INTERFACE TIMEMORY_USE_EXTERN)
 
     target_link_libraries(timemory-jump-${LIB_TYPE} PRIVATE
-        timemory-headers
-        timemory-compile-options)
+        timemory::timemory-headers
+        timemory::timemory-compile-options)
 
-    if(TARGET timemory-environment-${LIB_TYPE})
+    if(TARGET timemory::timemory-environment-${LIB_TYPE})
         target_link_libraries(timemory-jump-${LIB_TYPE} PRIVATE
-            timemory-environment-${LIB_TYPE})
+            timemory::timemory-environment-${LIB_TYPE})
     endif()
 
     install(TARGETS timemory-jump-${LIB_TYPE}
