--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -14,11 +14,12 @@ include(${CMAKE_CURRENT_LIST_DIR}/timemory-config-version.cmake)
 #----------------------------------------------------------------------------------------#
 #   Settings
 #----------------------------------------------------------------------------------------#
-set(TIMEMORY_PYTHON_BINDINGS @TIMEMORY_BUILD_PYTHON@)
-if(NOT DEFINED timemory_DIR)
-    set(timemory_DIR ${CMAKE_CURRENT_LIST_DIR})
-endif(NOT DEFINED timemory_DIR)
 set(TIMEMORY_C_LIBRARY @TIMEMORY_BUILD_C@)
+set(TIMEMORY_PYTHON_BINDINGS @TIMEMORY_USE_PYTHON@)
+if(NOT DEFINED timemory_DIR)
+    set(timemory_DIR ${CMAKE_CURRENT_LIST_DIR}
+        CACHE PATH "Path to the timemory installation")
+endif(NOT DEFINED timemory_DIR)
 
 # compile options
 set(timemory_C_COMPILE_OPTIONS @PROJECT_C_COMPILE_OPTIONS@)
@@ -33,24 +34,24 @@ set(timemory_EMPTY_INTERFACE_LIBRARIES @TIMEMORY_EMPTY_INTERFACE_LIBRARIES@)
 
 set(_EMPTY_BUT_REQUIRED_INTERFACES)
 set(_DEPRECATED_INTERFACES nvtx)
-foreach(_EMPTY_INTERFACE ${@PROJECT_NAME@_EMPTY_INTERFACE_LIBRARIES})
-    string(REPLACE "@PROJECT_NAME@-" "" _NAME "${_EMPTY_INTERFACE}")
+foreach(_EMPTY_INTERFACE ${timemory_EMPTY_INTERFACE_LIBRARIES})
+    string(REPLACE "timemory-" "" _NAME "${_EMPTY_INTERFACE}")
     if(_NAME IN_LIST _DEPRECATED_INTERFACES)
-       list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_EMPTY_INTERFACE})
-       list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_NAME})
-       unset(@PROJECT_NAME@_FIND_REQUIRED_${_EMPTY_INTERFACE})
-       unset(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
+       list(REMOVE_ITEM timemory_FIND_COMPONENTS ${_EMPTY_INTERFACE})
+       list(REMOVE_ITEM timemory_FIND_COMPONENTS ${_NAME})
+       unset(timemory_FIND_REQUIRED_${_EMPTY_INTERFACE})
+       unset(timemory_FIND_REQUIRED_${_NAME})
        continue()
     endif()
-    if(@PROJECT_NAME@_FIND_REQUIRED_${_NAME})
+    if(timemory_FIND_REQUIRED_${_NAME})
         list(APPEND _EMPTY_BUT_REQUIRED_INTERFACES ${_NAME})
     endif()
 endforeach()
 
-foreach(_COMP ${@PROJECT_NAME@_FIND_COMPONENTS})
+foreach(_COMP ${timemory_FIND_COMPONENTS})
     foreach(_DEPRECATED ${_DEPRECATED_INTERFACES})
         if("${_COMP}" MATCHES ".*${_DEPRECATED}.*")
-            list(REMOVE_ITEM @PROJECT_NAME@_FIND_COMPONENTS ${_COMP})
+            list(REMOVE_ITEM timemory_FIND_COMPONENTS ${_COMP})
         endif()
     endforeach()
 endforeach()
@@ -62,20 +63,13 @@ if(_EMPTY_BUT_REQUIRED_INTERFACES)
 endif()
 
 if(TIMEMORY_PYTHON_BINDINGS)
-    set(timemory_PYTHON_MODULE_PREFIX "@PYTHON_MODULE_PREFIX@" CACHE STRING
-        "timemory Python module prefix")
-    set(timemory_PYTHON_MODULE_EXTENSION "@PYTHON_MODULE_EXTENSION@" CACHE STRING
-        "timemory Python module extension")
-    set(timemory_PYTHON_VERSION_MAJOR "@PYTHON_VERSION_MAJOR@" CACHE STRING
-        "timemory Python major version")
-    set(timemory_PYTHON_VERSION_MINOR "@PYTHON_VERSION_MINOR@" CACHE STRING
-        "timemory Python minor version")
-    set(timemory_PYBIND11_VERSION_MAJOR "@PYBIND11_VERSION_MAJOR@" CACHE STRING
-        "timemory PyBind11 major version")
-    set(timemory_PYBIND11_VERSION_MINOR "@PYBIND11_VERSION_MINOR@" CACHE STRING
-        "timemory PyBind11 minor version")
-    set(timemory_PYBIND11_VERSION_MINOR "@PYBIND11_VERSION_PATCH@" CACHE STRING
-        "timemory PyBind11 minor version")
+    set(timemory_PYTHON_MODULE_PREFIX "@PYTHON_MODULE_PREFIX@")
+    set(timemory_PYTHON_MODULE_EXTENSION "@PYTHON_MODULE_EXTENSION@")
+    set(timemory_PYTHON_VERSION_MAJOR "@PYTHON_VERSION_MAJOR@")
+    set(timemory_PYTHON_VERSION_MINOR "@PYTHON_VERSION_MINOR@")
+    set(timemory_PYBIND11_VERSION_MAJOR "@PYBIND11_VERSION_MAJOR@")
+    set(timemory_PYBIND11_VERSION_MINOR "@PYBIND11_VERSION_MINOR@")
+    set(timemory_PYBIND11_VERSION_MINOR "@PYBIND11_VERSION_PATCH@")
 endif()
 
 if(timemory_LANGUAGE_STANDARDS)
@@ -95,20 +89,20 @@ if(timemory_LANGUAGE_STANDARDS)
     set(CMAKE_CUDA_EXTENSIONS @CMAKE_CUDA_EXTENSIONS@ CACHE BOOL "")
 endif()
 
-if(NOT timemory_ONETIME_MESSAGE_DELIVERED)
-    if(NOT timemory_FIND_QUIETLY)
-        set(_ENABLED ${timemory_INTERFACE_LIBRARIES})
-        set(_DISABLED ${timemory_EMPTY_INTERFACE_LIBRARIES})
-        message(STATUS "")
-        message(STATUS "timemory was not compiled with support for the following INTERFACE libraries (empty INTERFACE targets):")
-        foreach(_LIB ${_DISABLED})
-            message(STATUS "    ${_LIB}")
-        endforeach()
-        message(STATUS "")
-        unset(_DISABLED)
-        unset(_ENABLED)
-    endif()
+if(timemory_DEBUG AND NOT timemory_FIND_QUIETLY AND NOT timemory_ONETIME_MESSAGE_DELIVERED)
+    #
+    set(_ENABLED ${timemory_INTERFACE_LIBRARIES})
+    set(_DISABLED ${timemory_EMPTY_INTERFACE_LIBRARIES})
+    message(STATUS "")
+    message(STATUS "timemory was not compiled with support for the following INTERFACE libraries (empty INTERFACE targets):")
+    foreach(_LIB ${_DISABLED})
+        message(STATUS "    ${_LIB}")
+    endforeach()
+    message(STATUS "")
+    unset(_DISABLED)
+    unset(_ENABLED)
     set(timemory_ONETIME_MESSAGE_DELIVERED ON CACHE BOOL "Onetime message")
+    mark_as_advanced(timemory_ONETIME_MESSAGE_DELIVERED)
 endif()
 
 # languages
@@ -142,7 +136,7 @@ if(TIMEMORY_INSTALL_TREE)
     set_and_check(timemory_LIB_DIR "@PACKAGE_LIB_INSTALL_DIR@")
     get_filename_component(timemory_ROOT_DIR ${timemory_INCLUDE_DIR} PATH)
 
-    if(@TIMEMORY_BUILD_PYTHON@)
+    if(@TIMEMORY_USE_PYTHON@)
         set(timemory_PYTHON_DIR "@PACKAGE_PYTHON_INSTALL_DIR@")
         if(NOT EXISTS ${timemory_PYTHON_DIR})
             find_package(PythonInterp QUIET @TIMEMORY_FIND_REQUIREMENT@)
@@ -162,26 +156,24 @@ if(TIMEMORY_INSTALL_TREE)
 
     macro(TIMEMORY_DEPENDENT_PACKAGE _NAME _OPT)
         if(${_OPT})
-            find_package(${_NAME} REQUIRED ${ARGN})
+            find_package(${_NAME} ${ARGN})
         endif()
     endmacro()
 
-    # set(MPI_C_COMPILER "@MPI_C_COMPILER@")
-    # set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
-    # set(MPIEXEC_EXECUTABLE "@MPIEXEC_EXECUTABLE@")
-    set(caliper_DIR "@caliper_DIR@")
-    set(gotcha_DIR "@gotcha_DIR@")
-    set(OpenMP_DIR "@OpenMP_DIR@")
-    set(Dyninst_DIR "@Dyninst_DIR@")
-    set(Boost_DIR "@Boost_DIR@")
-    set(PAPI_DIR "@PAPI_DIR@")
-    # set(Kokkos_DIR "@Kokkos_DIR@")
+    set(caliper_DIR "@caliper_DIR@" CACHE PATH "Path to caliper installation (timemory)")
+    set(gotcha_DIR "@gotcha_DIR@" CACHE PATH "Path to gotcha installation (timemory)")
+    set(OpenMP_DIR "@OpenMP_DIR@" CACHE PATH "Path to OpenMP installation (timemory)")
+    set(Dyninst_DIR "@Dyninst_DIR@" CACHE PATH "Path to DynInst installation (timemory)")
+    set(Boost_DIR "@Boost_DIR@" CACHE PATH "Path to Boost installation (timemory)")
+    set(PAPI_DIR "@PAPI_DIR@" CACHE PATH "Path to PAPI installation (timemory)")
 
     # temporarily override module path for quiet version of FindBoost.cmake
     set(_MODULE_PATH ${CMAKE_MODULE_PATH})
     set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/Modules ${CMAKE_MODULE_PATH})
 
     set(Boost_NO_BOOST_CMAKE ON CACHE BOOL "Disable use of BoostConfig.cmake")
+    mark_as_advanced(Boost_NO_BOOST_CMAKE)
+
     timemory_dependent_package(MPI      @TIMEMORY_USE_MPI@)
     timemory_dependent_package(caliper  @TIMEMORY_USE_CALIPER@)
     timemory_dependent_package(gotcha   @TIMEMORY_USE_GOTCHA@)
@@ -190,7 +182,6 @@ if(TIMEMORY_INSTALL_TREE)
     timemory_dependent_package(PAPI     @TIMEMORY_USE_PAPI@)
     timemory_dependent_package(Boost    @TIMEMORY_USE_DYNINST@ QUIET COMPONENTS
         "@TIMEMORY_BOOST_COMPONENTS@")
-    # timemory_dependent_package(Kokkos @TIMEMORY_USE_KOKKOS@)
 
     # revert cmake module path
     set(CMAKE_MODULE_PATH ${_MODULE_PATH})
@@ -205,61 +196,48 @@ else() # build tree
     set(timemory_INCLUDE_DIRS "@PROJECT_SOURCE_DIR@/source")
     set(timemory_LIB_DIR "@PROJECT_BINARY_DIR@")
 
-    if(@TIMEMORY_BUILD_PYTHON@)
+    if(@TIMEMORY_USE_PYTHON@)
         set(timemory_PYTHON_DIR "@PROJECT_BINARY_DIR@")
     endif()
 
-    MACRO(IMPORT_LIB _LIB _IMPORT_TYPE)
-        set_property(TARGET ${_LIB} PROPERTY ${_IMPORT_TYPE}
-            "@PROJECT_BINARY_DIR@/@PROJECT_NAME@-build.cmake")
-    ENDMACRO()
-
-    foreach(_LIB ${timemory_INTERFACE_LIBRARIES})
-        import_lib(${_LIB} INTERFACE_IMPORTED_LOCATION)
-    endforeach()
-
-    foreach(_LIB ${timemory_COMPILED_LIBRARIES})
-        import_lib(${_LIB} IMPORTED_LOCATION)
-    endforeach()
-
     # if TIMEMORY_USE_COVERAGE, always link to library
     if(@TIMEMORY_USE_COVERAGE@)
-        list(APPEND @PROJECT_NAME@_FIND_COMPONENTS cxx)
+        list(APPEND timemory_FIND_COMPONENTS cxx)
     endif()
 
 endif()
 
 
 #----------------------------------------------------------------------------------------#
-#   timemory link target
+#   classic variables
 #----------------------------------------------------------------------------------------#
 
 set(timemory_LIBRARIES timemory::timemory-headers)
-set(timemory_C_LIBRARIES timemory::timemory-headers)
-set(timemory_CXX_LIBRARIES timemory::timemory-headers)
+set(timemory_C_LIBRARIES)
+set(timemory_CXX_LIBRARIES)
 
 if(TARGET timemory::timemory-cxx-shared AND (NOT DEFINED BUILD_SHARED_LIBS OR BUILD_SHARED_LIBS))
     list(APPEND timemory_LIBRARIES timemory::timemory-cxx-shared)
-    list(APPEND timemory_CXX_LIBRARIES timemory::timemory-cxx-shared)
+    list(APPEND timemory_CXX_LIBRARIES
+        timemory::timemory-headers
+        timemory::timemory-cxx-shared)
 elseif(TARGET timemory::timemory-cxx-static)
     list(APPEND timemory_LIBRARIES timemory::timemory-cxx-static)
-    list(APPEND timemory_CXX_LIBRARIES timemory::timemory-cxx-static)
+    list(APPEND timemory_CXX_LIBRARIES
+        timemory::timemory-headers
+        timemory::timemory-cxx-static)
 endif()
 
 if(TARGET timemory::timemory-c-shared AND (NOT DEFINED BUILD_SHARED_LIBS OR BUILD_SHARED_LIBS))
     list(APPEND timemory_LIBRARIES timemory::timemory-c-shared)
-    list(APPEND timemory_C_LIBRARIES timemory::timemory-c-shared)
+    list(APPEND timemory_C_LIBRARIES
+        timemory::timemory-headers
+        timemory::timemory-c-shared)
 elseif(TARGET timemory::timemory-c-static)
     list(APPEND timemory_LIBRARIES timemory::timemory-c-static)
-    list(APPEND timemory_C_LIBRARIES timemory::timemory-c-static)
-endif()
-
-if(TARGET timemory::timemory-cxx-static)
-    list(APPEND timemory_STATIC_LIBRARIES timemory::timemory-cxx-static)
-endif()
-
-if(TARGET timemory::timemory-c-static)
-    list(APPEND timemory_STATIC_LIBRARIES timemory::timemory-c-static)
+    list(APPEND timemory_C_LIBRARIES
+        timemory::timemory-headers
+        timemory::timemory-c-static)
 endif()
 
 #----------------------------------------------------------------------------------------#
@@ -268,10 +246,6 @@ endif()
 
 set(_timemory_MISSING_COMPONENTS )
 set(timemory_FOUND_COMPONENTS ${timemory_FIND_COMPONENTS})
-
-if(DEFINED TIMEMORY_COMPILER_INSTRUMENTATION AND TIMEMORY_COMPILER_INSTRUMENTATION)
-    set(TIMEMORY_SKIP_INTERFACE_LIBRARY ON)
-endif()
 
 # option to skip building the interface library
 set(TIMEMORY_BUILD_INTERFACE_LIBRARY ON)
@@ -282,7 +256,7 @@ elseif("${timemory_FIND_COMPONENTS}" STREQUAL "")
 endif()
 
 # if build interface library is enabled
-if(TIMEMORY_BUILD_INTERFACE_LIBRARY OR TIMEMORY_COMPILER_INSTRUMENTATION)
+if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
 
     set(_INTERFACE_LIB timemory)
 
@@ -301,13 +275,8 @@ if(TIMEMORY_BUILD_INTERFACE_LIBRARY OR TIMEMORY_COMPILER_INSTRUMENTATION)
 endif()
 
 # include component libraries
-if(TIMEMORY_BUILD_INTERFACE_LIBRARY OR TIMEMORY_COMPILER_INSTRUMENTATION)
+if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
     include(${CMAKE_CURRENT_LIST_DIR}/timemory-config-components.cmake)
-endif()
-
-# compiler instrumentation targets
-if(NOT TARGET timemory-compiler-instrumentation)
-    add_library(timemory-compiler-instrumentation INTERFACE IMPORTED)
 endif()
 
 # if build interface library is enabled and COMPONENTS were specified
@@ -320,13 +289,6 @@ if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
         set(timemory_INTERFACE_COMPONENTS timemory::timemory-headers ${_INTERFACE_LIB})
         include(${CMAKE_CURRENT_LIST_DIR}/timemory-target-extract.cmake)
     endif()
-
-elseif(TIMEMORY_COMPILER_INSTRUMENTATION)
-
-    target_link_libraries(${_INTERFACE_LIB} INTERFACE
-        timemory::timemory-compiler-instrumentation)
-    # only the compiler-instrumentation
-    set(timemory_LIBRARIES timemory::timemory-compiler-instrumentation)
 
 endif()
 
@@ -342,30 +304,48 @@ find_package_handle_standard_args(timemory DEFAULT_MSG
     timemory_INCLUDE_DIRS
     ${_timemory_MISSING_COMPONENTS})
 
-unset(TIMEMORY_INSTALL_TREE)
-
-if(TARGET timemory-cxx-shared OR TARGET timemory-cxx-static)
+if(TARGET timemory::timemory-cxx-shared OR TARGET timemory::timemory-cxx-static)
     set(timemory_LIBRARY_FOUND ON)
 endif()
 
-if(TARGET timemory-cxx-shared)
+if(TARGET timemory::timemory-cxx-shared)
     set(timemory_SHARED_LIBRARY_FOUND ON)
 endif()
 
-if(TARGET timemory-cxx-static)
+if(TARGET timemory::timemory-cxx-static)
     set(timemory_STATIC_LIBRARY_FOUND ON)
 endif()
 
-set(timemory_ENABLED_LINK_LANGUAGES )
-set(timemory_ENABLED_LINK_LIBRARIES )
+set(timemory_ENABLED_LINK_LANGUAGES)
+set(timemory_ENABLED_LINK_LIBRARIES)
+set(timemory_SHARED_LIBRARIES)
+set(timemory_STATIC_LIBRARIES)
 foreach(_LANG c cxx)
     foreach(_LINK shared static)
         if(TARGET timemory-${_LANG}-${_LINK})
             string(TOUPPER "${_LANG}" _ENABLED_LANG)
             string(TOUPPER "${_LINK}" _ENABLED_LINK)
+            list(APPEND timemory_${_ENABLED_LINK}_LIBRARIES timemory-${_LANG}-${_LINK})
             list(APPEND timemory_ENABLED_LINK_LANGUAGES ${_ENABLED_LANG})
             list(APPEND timemory_ENABLED_LINK_LIBRARIES ${_ENABLED_LINK})
             unset(_ENABLED_LANG)
         endif()
     endforeach()
 endforeach()
+
+if(TIMEMORY_INSTALL_TREE)
+    if(NOT TARGET timemory::timemory)
+        add_library(timemory::timemory INTERFACE IMPORTED)
+    endif()
+    if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
+        target_link_libraries(timemory::timemory ${_INTERFACE_LIB})
+    else()
+        target_link_libraries(timemory::timemory ${timemory_LIBRARIES})
+    endif()
+
+    if(NOT TARGET timemory::timemory)
+        add_library(timemory::timemory INTERFACE IMPORTED)
+    endif()
+endif()
+
+unset(TIMEMORY_INSTALL_TREE)
