--- a/source/tools/timemory-compiler-instrument/CMakeLists.txt
+++ b/source/tools/timemory-compiler-instrument/CMakeLists.txt
@@ -7,11 +7,119 @@ endif()
 cmake_policy(PUSH)
 cmake_policy(SET CMP0063 NEW)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON) # ensure always pic
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS OFF)
-unset(CMAKE_C_VISIBILITY_PRESET)
-unset(CMAKE_CXX_VISIBILITY_PRESET)
+# set(CMAKE_C_VISIBILITY_PRESET)
+# set(CMAKE_CXX_VISIBILITY_PRESET)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
+set(CMAKE_BUILD_TYPE "Release")
+set(CMAKE_UNITY_BUILD OFF)
 
-foreach(LIB_TYPE shared static)
+set(LINK_LIBS)
+if(dl_LIBRARY)
+    list(APPEND LINK_LIBS ${dl_LIBRARY})
+endif()
+if(rt_LIBRARY)
+    list(APPEND LINK_LIBS ${rt_LIBRARY})
+endif()
+
+#----------------------------------------------------------------------------------------#
+
+function(strip_target LIB_TARGET LIB_TYPE LIB_FUNC)
+    if(APPLE)
+        if("${LIB_TYPE}" STREQUAL "shared")
+            set(_link_flags
+                -exported_symbol=_${LIB_FUNC}_enter
+                -exported_symbol=_${LIB_FUNC}_exit)
+            if(NOT CMAKE_VERSION VERSION_LESS 3.13)
+                target_link_options(${LIB_TARGET} PRIVATE ${_link_flags})
+            else()
+                target_compile_options(${LIB_TARGET} PRIVATE
+                    $<LINK_ONLY:${_link_flags}>)
+            endif()
+        endif()
+        set(_FILE ${CMAKE_CURRENT_BINARY_DIR}/${LIB_TARGET}-symbols.txt)
+        file(WRITE ${_FILE} "_${LIB_FUNC}_enter\n_${LIB_FUNC}_exit\n")
+        add_custom_command(TARGET ${LIB_TARGET}
+            POST_BUILD
+            COMMAND ${CMAKE_STRIP}
+                -s ${_FILE} -i -S -x -X -N
+                $<TARGET_FILE:${LIB_TARGET}>
+            WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    else()
+        add_custom_command(TARGET ${LIB_TARGET}
+            POST_BUILD
+            COMMAND ${CMAKE_STRIP} -s
+                --keep-symbol=${LIB_FUNC}_enter
+                --keep-symbol=${LIB_FUNC}_exit
+                --keep-symbol=_${LIB_FUNC}_enter
+                --keep-symbol=_${LIB_FUNC}_exit
+                $<TARGET_FILE:${LIB_TARGET}>
+            WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    endif()
+
+endfunction()
+
+#----------------------------------------------------------------------------------------#
+
+set(LIB_TARGET timemory-compiler-instrument-base)
+
+build_library(
+    PIC
+    NO_CACHE_LIST
+    TYPE                STATIC
+    TARGET_NAME         ${LIB_TARGET}
+    OUTPUT_NAME         ${LIB_TARGET}
+    LANGUAGE            CXX
+    LINKER_LANGUAGE     ${_LINKER_LANGUAGE}
+    OUTPUT_DIR          ${PROJECT_BINARY_DIR}/compiler
+    SOURCES             ${CMAKE_CURRENT_LIST_DIR}/compiler-instrument-base.cpp)
+
+target_compile_definitions(${LIB_TARGET} PRIVATE
+    TIMEMORY_COMPILER_INSTRUMENTATION)
+
+target_link_libraries(${LIB_TARGET} PUBLIC
+    ${LINK_LIBS})
+
+target_link_libraries(${LIB_TARGET} PRIVATE
+    timemory::timemory-dmp
+    timemory::timemory-headers
+    timemory::timemory-extensions
+    timemory::timemory-compile-options
+    # timemory::timemory-hidden-visibility
+    )
+
+# strip_target(${LIB_TARGET} STATIC "timemory_profile_func")
+
+install(TARGETS ${LIB_TARGET}
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/compiler
+    EXPORT timemory-library-depends)
+
+# build tree
+execute_process(
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+        compiler/libtimemory-compiler-instrument${CMAKE_STATIC_LIBRARY_SUFFIX}
+        libtimemory-compiler-instrument${CMAKE_STATIC_LIBRARY_SUFFIX}
+    WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
+
+# install tree
+install(CODE "
+EXECUTE_PROCESS(
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+        timemory/compiler/libtimemory-compiler-instrument${CMAKE_STATIC_LIBRARY_SUFFIX}
+        libtimemory-compiler-instrument${CMAKE_STATIC_LIBRARY_SUFFIX}
+    WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+")
+
+#----------------------------------------------------------------------------------------#
+
+if(APPLE)
+    set(_LIB_TYPES shared)
+else()
+    set(_LIB_TYPES shared static)
+endif()
+
+foreach(LIB_TYPE ${_LIB_TYPES})
 
     set(LIB_TARGET timemory-compiler-instrument-${LIB_TYPE})
     string(TOUPPER "${LIB_TYPE}" UC_LIB_TYPE)
@@ -27,21 +135,11 @@ foreach(LIB_TYPE shared static)
         OUTPUT_DIR          ${PROJECT_BINARY_DIR}/compiler
         SOURCES             ${CMAKE_CURRENT_LIST_DIR}/compiler-instrument.cpp)
 
-    # don't allow in-source instrumentation
-    target_compile_definitions(${LIB_TARGET} INTERFACE
-        DISABLE_TIMEMORY
-        TIMEMORY_COMPILER_INSTRUMENTATION)
-
-    target_compile_definitions(${LIB_TARGET} PRIVATE
-        TIMEMORY_COMPILER_INSTRUMENTATION_IMPL)
-
-    target_link_libraries(${LIB_TARGET} PUBLIC
-        ${dl_LIBRARY})
-
     target_link_libraries(${LIB_TARGET} PRIVATE
-        timemory::timemory-headers
+        timemory-compiler-instrument-base
         timemory::timemory-compile-options
-        timemory::timemory-hidden-visibility)
+        timemory::timemory-hidden-visibility
+        )
 
     if(WIN32)
         # not yet implemented
@@ -58,9 +156,16 @@ foreach(LIB_TYPE shared static)
         set_target_properties(${LIB_TARGET} PROPERTIES
             INTERFACE_LINK_OPTIONS "/DEBUG")
     else()
+        set(_rdynamic)
+        if(NOT (CMAKE_CXX_COMPILER_IS_CLANG AND APPLE))
+            set(_rdynamic
+                $<$<COMPILE_LANGUAGE:C>:-rdynamic>
+                $<$<COMPILE_LANGUAGE:CXX>:-rdynamic>)
+        endif()
         target_compile_options(${LIB_TARGET} INTERFACE
             $<$<COMPILE_LANGUAGE:C>:-g>
             $<$<COMPILE_LANGUAGE:CXX>:-g>
+            ${_rdynamic}
             $<$<COMPILE_LANGUAGE:C>:-fno-omit-frame-pointer>
             $<$<COMPILE_LANGUAGE:CXX>:-fno-omit-frame-pointer>
             $<$<COMPILE_LANGUAGE:C>:-fno-optimize-sibling-calls>
@@ -75,9 +180,10 @@ foreach(LIB_TYPE shared static)
             $<$<COMPILE_LANGUAGE:CXX>:-fvisibility-inlines-hidden>)
     endif()
 
+    strip_target(${LIB_TARGET} ${LIB_TYPE} "__cyg_profile_func")
+
     install(TARGETS ${LIB_TARGET}
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/compiler
-        EXPORT timemory-library-depends)
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/timemory/compiler)
 
     # build tree
     execute_process(
